# pan_search_plugin

./: README.md  __init__.py  pyproject.toml
